Add real images from vpolitov.com to Play page

--- a/play/index.html
+++ b/play/index.html
@@ -121,42 +121,42 @@
 
                 <!-- Item 1 -->
                 <div class="play-item project-anim-item">
-                    <img src="https://picsum.photos/800/600?random=1" alt="Creative Work 1">
+                    <img src="imgs/img_1.jpg" alt="Creative Work 1">
                 </div>
 
                 <!-- Item 2 -->
                 <div class="play-item project-anim-item">
-                    <img src="https://picsum.photos/800/1000?random=2" alt="Creative Work 2">
+                    <img src="imgs/img_2.jpg" alt="Creative Work 2">
                 </div>
 
                 <!-- Item 3 -->
                 <div class="play-item project-anim-item">
-                    <img src="https://picsum.photos/800/800?random=3" alt="Creative Work 3">
+                    <img src="imgs/img_3.jpg" alt="Creative Work 3">
                 </div>
 
                 <!-- Item 4 -->
                 <div class="play-item project-anim-item">
-                    <img src="https://picsum.photos/800/600?random=4" alt="Creative Work 4">
+                    <img src="imgs/img_4.jpg" alt="Creative Work 4">
                 </div>
 
                 <!-- Item 5 -->
                 <div class="play-item project-anim-item">
-                    <img src="https://picsum.photos/800/900?random=5" alt="Creative Work 5">
+                    <img src="imgs/img_5.jpg" alt="Creative Work 5">
                 </div>
 
                 <!-- Item 6 -->
                 <div class="play-item project-anim-item">
-                    <img src="https://picsum.photos/800/700?random=6" alt="Creative Work 6">
+                    <img src="imgs/img_6.jpg" alt="Creative Work 6">
                 </div>
 
                 <!-- Item 7 -->
                 <div class="play-item project-anim-item">
-                    <img src="https://picsum.photos/800/1100?random=7" alt="Creative Work 7">
+                    <img src="imgs/img_7.jpg" alt="Creative Work 7">
                 </div>
 
                 <!-- Item 8 -->
                 <div class="play-item project-anim-item">
-                    <img src="https://picsum.photos/800/600?random=8" alt="Creative Work 8">
+                    <img src="imgs/img_8.jpg" alt="Creative Work 8">
                 </div>
 
             </div>
