--- a/play/index.html
+++ b/play/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Play - Oleg Shmarov</title>
     <link rel="stylesheet" href="../css/project.css">
     <link rel="icon" href="../img/favicon.webp" type="image/svg+xml">
-
     <style>
         /* Стили для плавной загрузки карточек Play */
         .play-item {
             opacity: 0;
             transform: translateY(80px) scale(0.9);
             transition: all 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+            position: relative;
+            border-radius: 18px;
+            overflow: hidden;
+            background: #000;
+            cursor: pointer;
+            min-height: 400px;
         }
-
         .play-item.loaded {
             opacity: 1;
             transform: translateY(0) scale(1);
         }
-
         /* Красивый hover эффект */
         .play-item.loaded {
             transition: transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94),
                 box-shadow 0.5s ease;
         }
-
         .play-item.loaded:hover {
             transform: translateY(-15px) scale(1.03);
             box-shadow: 0 25px 50px rgba(0, 0, 0, 0.25);
             z-index: 10;
         }
-
-        .play-item.loaded:hover img,
-        .play-item.loaded:hover video {
+        .play-item.loaded:hover img {
             transform: scale(1.08);
             filter: brightness(1.1);
         }
-
-        .play-item img,
-        .play-item video {
+        /* Изображения заполняют карточку полностью */
+        .play-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
             transition: transform 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94),
                 filter 0.4s ease;
         }
-
         /* Overlay при hover */
         .play-item::before {
             content: '';
@@ -58,14 +59,203 @@
             transition: opacity 0.4s ease;
             z-index: 1;
             pointer-events: none;
-            border-radius: 18px;
         }
-
         .play-item.loaded:hover::before {
             opacity: 1;
         }
+        /* Модальное окно для просмотра изображений */
+        .image-modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0);
+            backdrop-filter: blur(0px);
+            z-index: 10000;
+            opacity: 0;
+            cursor: zoom-out;
+            overflow: hidden;
+        }
+        .image-modal.active {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            animation: modalFadeIn 0.6s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+        }
+        @keyframes modalFadeIn {
+            0% {
+                opacity: 0;
+                background: rgba(0, 0, 0, 0);
+                backdrop-filter: blur(0px);
+            }
+            100% {
+                opacity: 1;
+                background: rgba(0, 0, 0, 0.95);
+                backdrop-filter: blur(10px);
+            }
+        }
+        .modal-content-wrapper {
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 10001;
+        }
+        .image-modal img {
+            max-width: 85%;
+            max-height: 85vh;
+            object-fit: contain;
+            border-radius: 12px;
+            box-shadow: 0 30px 90px rgba(0, 0, 0, 0.6),
+                0 0 60px rgba(255, 255, 255, 0.1);
+            transform: scale(0.7) rotateX(15deg);
+            opacity: 0;
+            filter: blur(20px);
+            position: relative;
+            z-index: 2;
+        }
+        .image-modal.active img {
+            animation: imageZoomIn 0.8s cubic-bezier(0.19, 1, 0.22, 1) 0.2s forwards;
+        }
+        @keyframes imageZoomIn {
+            0% {
+                transform: scale(0.7) rotateX(15deg);
+                opacity: 0;
+                filter: blur(20px);
+            }
+            60% {
+                transform: scale(1.02) rotateX(0deg);
+            }
+            100% {
+                transform: scale(1) rotateX(0deg);
+                opacity: 1;
+                filter: blur(0px);
+            }
+        }
+        /* Частицы вокруг изображения - ПОВЕРХ ВСЕГО */
+        .particle {
+            position: absolute;
+            width: 6px;
+            height: 6px;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
+            border-radius: 50%;
+            pointer-events: none;
+            z-index: 10004;
+            animation: particleFloat 3s ease-in-out infinite;
+        }
+        @keyframes particleFloat {
+            0%,
+            100% {
+                transform: translate(0, 0) scale(1);
+                opacity: 0;
+            }
+            10% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.6;
+            }
+            90% {
+                opacity: 1;
+            }
+        }
+        /* Свечение вокруг изображения */
+        .image-modal::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 60%;
+            height: 60%;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.05), transparent 70%);
+            transform: translate(-50%, -50%) scale(0);
+            opacity: 0;
+            pointer-events: none;
+            z-index: 0;
+        }
+        .image-modal.active::before {
+            animation: glowPulse 0.8s ease-out 0.3s forwards;
+        }
+        @keyframes glowPulse {
+            0% {
+                transform: translate(-50%, -50%) scale(0);
+                opacity: 0;
+            }
+            50% {
+                opacity: 1;
+            }
+            100% {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 0.6;
+            }
+        }
+        .modal-close {
+            position: absolute;
+            top: 30px;
+            right: 30px;
+            width: 44px;
+            height: 44px;
+            background: rgba(255, 255, 255, 0.08);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 50%;
+            cursor: pointer;
+            transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            z-index: 10005;
+            opacity: 0;
+        }
+        .image-modal.active .modal-close {
+            animation: closeBtnFadeIn 0.4s ease 0.6s forwards;
+        }
+        @keyframes closeBtnFadeIn {
+            from {
+                opacity: 0;
+                transform: scale(0.8) rotate(-90deg);
+            }
+            to {
+                opacity: 1;
+                transform: scale(1) rotate(0deg);
+            }
+        }
+        .modal-close:hover {
+            background: rgba(255, 255, 255, 0.15);
+            transform: scale(1.1) rotate(90deg);
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+        }
+        .modal-close::before,
+        .modal-close::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 20px;
+            height: 2px;
+            background: #fff;
+            border-radius: 2px;
+        }
+        .modal-close::before {
+            transform: translate(-50%, -50%) rotate(45deg);
+        }
+        .modal-close::after {
+            transform: translate(-50%, -50%) rotate(-45deg);
+        }
+        /* Мобильная версия */
+        @media (max-width: 768px) {
+            .play-item {
+                min-height: auto;
+            }
+            .play-item img {
+                height: auto;
+                object-fit: contain;
+            }
+            .image-modal img {
+                max-width: 95%;
+                max-height: 80vh;
+            }
+        }
     </style>
-
     <script>
         (function () {
             const visited = sessionStorage.getItem('has_visited_site');
@@ -75,9 +265,7 @@
         })();
     </script>
 </head>
-
 <body class="project-page">
-
     <header class="semplice-header">
         <div class="smp-nav-row">
             <div class="nav-logo">
@@ -96,7 +284,6 @@
             <button class="mobile-menu-btn" onclick="toggleMenu()"><span></span><span></span><span></span></button>
         </div>
     </header>
-
     <div class="mobile-menu-overlay" id="mobileOverlay">
         <ul>
             <li><a href="../">Work</a></li>
@@ -105,62 +292,18 @@
             <li><a href="../info/">About</a></li>
         </ul>
     </div>
-
     <main id="content-holder">
         <div class="smp-container">
-
             <div class="project-header-wrapper project-anim-item">
                 <div class="project-header-block">
                     <h1 class="project-title">Playground</h1>
                     <div class="project-meta">Experiments & Styleframes</div>
                 </div>
             </div>
-
-            <!-- PLAY GRID -->
-            <div class="play-grid">
-
-                <!-- Item 1 -->
-                <div class="play-item project-anim-item">
-                    <img src="imgs/img_1.jpg" alt="Creative Work 1">
-                </div>
-
-                <!-- Item 2 -->
-                <div class="play-item project-anim-item">
-                    <img src="imgs/img_2.jpg" alt="Creative Work 2">
-                </div>
-
-                <!-- Item 3 -->
-                <div class="play-item project-anim-item">
-                    <img src="imgs/img_3.jpg" alt="Creative Work 3">
-                </div>
-
-                <!-- Item 4 -->
-                <div class="play-item project-anim-item">
-                    <img src="imgs/img_4.jpg" alt="Creative Work 4">
-                </div>
-
-                <!-- Item 5 -->
-                <div class="play-item project-anim-item">
-                    <img src="imgs/img_5.jpg" alt="Creative Work 5">
-                </div>
-
-                <!-- Item 6 -->
-                <div class="play-item project-anim-item">
-                    <img src="imgs/img_6.jpg" alt="Creative Work 6">
-                </div>
-
-                <!-- Item 7 -->
-                <div class="play-item project-anim-item">
-                    <img src="imgs/img_7.jpg" alt="Creative Work 7">
-                </div>
-
-                <!-- Item 8 -->
-                <div class="play-item project-anim-item">
-                    <img src="imgs/img_8.jpg" alt="Creative Work 8">
-                </div>
-
+            <!-- PLAY GRID - Автоматически заполняется из папки imgs -->
+            <div class="play-grid" id="playGrid">
+                <!-- Карточки будут добавлены автоматически через JavaScript -->
             </div>
-
             <footer class="footer-section">
                 <div class="footer-top-row">
                     <div class="footer-links">
@@ -177,33 +320,130 @@
             </footer>
         </div>
     </main>
-
+    <!-- Модальное окно для просмотра изображений -->
+    <div class="image-modal" id="imageModal">
+        <button class="modal-close" id="modalClose"></button>
+        <div class="modal-content-wrapper" id="modalContentWrapper">
+            <img src="" alt="Full size image">
+        </div>
+    </div>
     <button class="back-to-top" id="scrollToTopBtn" aria-label="Scroll to top">
         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path d="M12 4l-8 8h6v8h4v-8h6z" />
         </svg>
     </button>
-
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
+        document.addEventListener('DOMContentLoaded', async function () {
             if (document.documentElement.classList.contains('is-animating')) {
                 setTimeout(() => { document.querySelector('.semplice-header')?.classList.add('start-anim'); }, 500);
             }
-
+            // --- АВТОМАТИЧЕСКАЯ ЗАГРУЗКА ИЗОБРАЖЕНИЙ ИЗ ПАПКИ ---
+            const playGrid = document.getElementById('playGrid');
+            const imageExtensions = ['jpg', 'jpeg', 'png', 'gif', 'webp'];
+            const images = [];
+            // Пробуем загрузить изображения с img_1 до img_100
+            for (let i = 1; i <= 100; i++) {
+                for (const ext of imageExtensions) {
+                    const imgPath = `imgs/img_${i}.${ext}`;
+                    try {
+                        const response = await fetch(imgPath, { method: 'HEAD' });
+                        if (response.ok) {
+                            images.push(imgPath);
+                            break; // Нашли файл, переходим к следующему номеру
+                        }
+                    } catch (e) {
+                        // Файл не найден, продолжаем
+                    }
+                }
+            }
+            // Создаем карточки для найденных изображений
+            images.forEach((imgPath, index) => {
+                const playItem = document.createElement('div');
+                playItem.className = 'play-item project-anim-item';
+                const img = document.createElement('img');
+                img.src = imgPath;
+                img.alt = `Creative Work ${index + 1}`;
+                playItem.appendChild(img);
+                playGrid.appendChild(playItem);
+            });
+            // Анимация появления элементов
             const contentItems = document.querySelectorAll('.project-anim-item');
             contentItems.forEach((item, index) => setTimeout(() => item.classList.add('animate-in'), 200 + (index * 100)));
-            setTimeout(() => document.querySelector('.footer-section').classList.add('animate-in'), 200 + (contentItems.length * 100) + 100);
-
+            setTimeout(() => document.querySelector('.footer-section')?.classList.add('animate-in'), 200 + (contentItems.length * 100) + 100);
             // --- ПЛАВНАЯ ПОСТЕПЕННАЯ ЗАГРУЗКА КАРТОЧЕК PLAY ---
             const playItems = document.querySelectorAll('.play-item');
-
             playItems.forEach((item, index) => {
-                // Добавляем класс loaded с задержкой для каждой карточки
                 setTimeout(() => {
                     item.classList.add('loaded');
-                }, 300 + (index * 200)); // Каждая карточка появляется через 200мс после предыдущей
+                }, 300 + (index * 200));
             });
-
+            // --- МОДАЛЬНОЕ ОКНО С ЧАСТИЦАМИ ---
+            const modal = document.getElementById('imageModal');
+            const modalImg = modal.querySelector('img');
+            const modalClose = document.getElementById('modalClose');
+            const modalContentWrapper = document.getElementById('modalContentWrapper');
+            // Функция создания частиц
+            function createParticles() {
+                const particleCount = 40;
+                for (let i = 0; i < particleCount; i++) {
+                    const particle = document.createElement('div');
+                    particle.className = 'particle';
+                    // Случайная позиция вокруг изображения
+                    const angle = (Math.PI * 2 * i) / particleCount;
+                    const radius = 250 + Math.random() * 200;
+                    const x = Math.cos(angle) * radius;
+                    const y = Math.sin(angle) * radius;
+                    particle.style.left = `calc(50% + ${x}px)`;
+                    particle.style.top = `calc(50% + ${y}px)`;
+                    particle.style.animationDelay = `${Math.random() * 3}s`;
+                    particle.style.animationDuration = `${2 + Math.random() * 2}s`;
+                    modalContentWrapper.appendChild(particle);
+                }
+            }
+            // Функция удаления частиц
+            function removeParticles() {
+                const particles = modalContentWrapper.querySelectorAll('.particle');
+                particles.forEach(p => p.remove());
+            }
+            // Открытие модального окна
+            playItems.forEach(item => {
+                item.addEventListener('click', function () {
+                    const img = this.querySelector('img');
+                    if (img) {
+                        modalImg.src = img.src;
+                        modal.classList.add('active');
+                        document.body.style.overflow = 'hidden';
+                        // Создаем частицы с задержкой
+                        setTimeout(() => {
+                            createParticles();
+                        }, 400);
+                    }
+                });
+            });
+            // Закрытие модального окна
+            function closeModal() {
+                modal.classList.remove('active');
+                document.body.style.overflow = '';
+                removeParticles();
+                setTimeout(() => {
+                    modalImg.src = '';
+                }, 600);
+            }
+            modalClose.addEventListener('click', (e) => {
+                e.stopPropagation();
+                closeModal();
+            });
+            modal.addEventListener('click', (e) => {
+                if (e.target === modal) {
+                    closeModal();
+                }
+            });
+            // Закрытие по Escape
+            document.addEventListener('keydown', (e) => {
+                if (e.key === 'Escape' && modal.classList.contains('active')) {
+                    closeModal();
+                }
+            });
             // --- SCROLL TO TOP ---
             const btn = document.getElementById('scrollToTopBtn');
             if (btn) {
@@ -215,17 +455,14 @@
                         btn.classList.remove('is-visible');
                     }
                 };
-
                 window.addEventListener('scroll', checkScroll, { passive: true });
                 checkScroll();
-
                 btn.addEventListener('click', (e) => {
                     e.preventDefault();
                     const start = window.scrollY || document.documentElement.scrollTop;
                     const startTime = performance.now();
                     const duration = 800;
                     const easeOutCubic = t => (--t) * t * t + 1;
-
                     function scrollStep(timestamp) {
                         const currentTime = timestamp - startTime;
                         let progress = Math.min(currentTime / duration, 1);
@@ -242,5 +479,4 @@
         function toggleMenu() { document.getElementById('mobileOverlay').classList.toggle('active'); }
     </script>
 </body>
-
 </html>
