--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <nav>
                 <ul>
                     <li class="current-menu-item"><a href="./">Work</a></li>
-                    <li><a href="reel/">Reel</a></li>
-                    <li><a href="play/">Play</a></li>
-                    <li><a href="info/">About</a></li>
+                    <li><a href="reel">Reel</a></li>
+                    <li><a href="play">Play</a></li>
+                    <li><a href="info">About</a></li>
                 </ul>
             </nav>
 
@@ -53,9 +53,9 @@
     <div class="mobile-menu-overlay" id="mobileOverlay">
         <ul>
             <li><a href="./">Work</a></li>
-            <li><a href="reel/">Reel</a></li>
-            <li><a href="play/">Play</a></li>
-            <li><a href="info/">About</a></li>
+            <li><a href="reel">Reel</a></li>
+            <li><a href="play">Play</a></li>
+            <li><a href="info">About</a></li>
         </ul>
     </div>
 
@@ -309,3 +309,4 @@
 </body>
 
 </html>
+
