--- a/reel/index.html
+++ b/reel/index.html
@@ -45,9 +45,9 @@
     <div class="mobile-menu-overlay" id="mobileOverlay">
         <ul>
             <li><a href="./">Work</a></li>
-            <li><a href="reel/">Reel</a></li>
-            <li><a href="play/">Play</a></li>
-            <li><a href="info/">About</a></li>
+            <li><a href="reel">Reel</a></li>
+            <li><a href="play">Play</a></li>
+            <li><a href="info">About</a></li>
         </ul>
     </div>
 
