Fix links in navigation menu for Play and About

--- a/reel/index.html
+++ b/reel/index.html
@@ -32,8 +32,8 @@
                 <ul>
                     <li><a href="../">Work</a></li>
                     <li class="current-menu-item"><a href="./">Reel</a></li>
-                    <li><a href="../play/">Play</a></li>
-                    <li><a href="../info/">About</a></li>
+                    <li><a href="../play">Play</a></li>
+                    <li><a href="../info">About</a></li>
                 </ul>
             </nav>
             <button class="mobile-menu-btn" onclick="toggleMenu()">
