--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <nav>
                 <ul>
                     <li class="current-menu-item"><a href="./">Work</a></li>
-                    <li><a href="reel">Reel</a></li>
-                    <li><a href="play">Play</a></li>
-                    <li><a href="info">About</a></li>
+                    <li><a href="https://f1nal.me/reel">Reel</a></li>
+                    <li><a href="https://f1nal.me/play">Play</a></li>
+                    <li><a href="https://f1nal.me/info">About</a></li>
                 </ul>
             </nav>
 
@@ -52,10 +52,10 @@
 
     <div class="mobile-menu-overlay" id="mobileOverlay">
         <ul>
-            <li><a href="./">Work</a></li>
-            <li><a href="reel">Reel</a></li>
-            <li><a href="play">Play</a></li>
-            <li><a href="info">About</a></li>
+            <li><a href="https://f1nal.me">Work</a></li>
+            <li><a href="https://f1nal.me/reel">Reel</a></li>
+            <li><a href="https://f1nal.me/play">Play</a></li>
+          <li><a href="https://f1nal.me/info">About</a></li>
         </ul>
     </div>
 
@@ -309,4 +309,5 @@
 </body>
 
 </html>
+
 
