Update navigation links to use absolute URLs

--- a/reel/index.html
+++ b/reel/index.html
@@ -30,10 +30,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="../">Work</a></li>
+                    <li><a href="https://f1nal.me/work">Work</a></li>
                     <li class="current-menu-item"><a href="./">Reel</a></li>
-                    <li><a href="../play">Play</a></li>
-                    <li><a href="../info">About</a></li>
+                    <li><a href="https://f1nal.me/play">Play</a></li>
+                    <li><a href="https://f1nal.me/info">About</a></li>
                 </ul>
             </nav>
             <button class="mobile-menu-btn" onclick="toggleMenu()">
@@ -44,10 +44,10 @@
 
     <div class="mobile-menu-overlay" id="mobileOverlay">
         <ul>
-            <li><a href="./">Work</a></li>
-            <li><a href="reel">Reel</a></li>
-            <li><a href="play">Play</a></li>
-            <li><a href="info">About</a></li>
+            <li><a href="https://f1nal.me">Work</a></li>
+            <li><a href="https://f1nal.me/reel">Reel</a></li>
+            <li><a href="https://f1nal.me/play">Play</a></li>
+          <li><a href="https://f1nal.me/info">About</a></li>
         </ul>
     </div>
 
