--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <nav>
                 <ul>
-                    <li class="current-menu-item"><a href="./">Work</a></li>
+                    <li><a href="https://f1nal.me">Work</a></li>
                     <li><a href="https://f1nal.me/reel">Reel</a></li>
                     <li><a href="https://f1nal.me/play">Play</a></li>
                     <li><a href="https://f1nal.me/info">About</a></li>
@@ -309,5 +309,6 @@
 </body>
 
 </html>
+
 
 
