--- a/reel/index.html
+++ b/reel/index.html
@@ -31,7 +31,7 @@
             <nav>
                 <ul>
                     <li><a href="https://f1nal.me/work">Work</a></li>
-                    <li class="current-menu-item"><a href="./">Reel</a></li>
+                    <li><a href="https://f1nal.me/reel">Reel</a></li>
                     <li><a href="https://f1nal.me/play">Play</a></li>
                     <li><a href="https://f1nal.me/info">About</a></li>
                 </ul>
