--- a/play/index.html
+++ b/play/index.html
@@ -243,10 +243,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="../">Work</a></li>
-                    <li><a href="../reel/">Reel</a></li>
-                    <li class="current-menu-item"><a href="./">Play</a></li>
-                    <li><a href="../info/">About</a></li>
+                    <li><a href="https://f1nal.me/work">Work</a></li>
+                    <li><a href="https://f1nal.me/reel">Reel</a></li>
+                    <li><a href="https://f1nal.me/play">Play</a></li>
+                    <li><a href="https://f1nal.me/info">About</a></li>
                 </ul>
             </nav>
             <button class="mobile-menu-btn" onclick="toggleMenu()"><span></span><span></span><span></span></button>
@@ -255,10 +255,10 @@
 
     <div class="mobile-menu-overlay" id="mobileOverlay">
         <ul>
-            <li><a href="../">Work</a></li>
-            <li><a href="../reel/">Reel</a></li>
-            <li><a href="./">Play</a></li>
-            <li><a href="../info/">About</a></li>
+            <li><a href="https://f1nal.me">Work</a></li>
+            <li><a href="https://f1nal.me/reel">Reel</a></li>
+            <li><a href="https://f1nal.me/play">Play</a></li>
+          <li><a href="https://f1nal.me/info">About</a></li>
         </ul>
     </div>
 
@@ -432,3 +432,4 @@
     </script>
 </body>
 </html>
+
