--- a/play.html
+++ b/play.html
@@ -234,31 +234,35 @@
 
 <body class="project-page">
 
-    <header class="semplice-header">
+<header class="semplice-header">
         <div class="smp-nav-row">
             <div class="nav-logo">
-                <a href="../" class="image-link">
-                    <img src="../img/logo.svg" alt="Logo">
+                <a href="/" class="image-link">
+                    <img src="img/logo.svg" alt="Logo">
                 </a>
             </div>
+
             <nav>
                 <ul>
-                    <li><a href="https://f1nal.me/work">Work</a></li>
-                    <li><a href="https://f1nal.me/reel">Reel</a></li>
-                    <li><a href="https://f1nal.me/play">Play</a></li>
-                    <li><a href="https://f1nal.me/info">About</a></li>
+                    <li><a href="/">Work</a></li>
+                    <li><a href="/reel">Reel</a></li>
+                    <li class="current-menu-item"><a href="/play">Play</a></li>
+                    <li><a href="/info">About</a></li>
                 </ul>
             </nav>
-            <button class="mobile-menu-btn" onclick="toggleMenu()"><span></span><span></span><span></span></button>
+
+            <button class="mobile-menu-btn" onclick="toggleMenu()">
+                <span></span><span></span><span></span>
+            </button>
         </div>
     </header>
 
     <div class="mobile-menu-overlay" id="mobileOverlay">
         <ul>
-            <li><a href="https://f1nal.me">Work</a></li>
-            <li><a href="https://f1nal.me/reel">Reel</a></li>
-            <li><a href="https://f1nal.me/play">Play</a></li>
-          <li><a href="https://f1nal.me/info">About</a></li>
+            <li><a href="/">Work</a></li>
+            <li><a href="/reel">Reel</a></li>
+            <li><a href="/play">Play</a></li>
+            <li><a href="/info">About</a></li>
         </ul>
     </div>
 
@@ -432,4 +436,5 @@
     </script>
 </body>
 </html>
+
 
