--- a/reel.html
+++ b/reel.html
@@ -30,7 +30,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="https://f1nal.me/work">Work</a></li>
+                    <li><a href="https://f1nal.me">Work</a></li>
                     <li><a href="https://f1nal.me/reel">Reel</a></li>
                     <li><a href="https://f1nal.me/play">Play</a></li>
                     <li><a href="https://f1nal.me/info">About</a></li>
