Update header links and logo source in reel.html

--- a/reel.html
+++ b/reel.html
@@ -20,14 +20,15 @@
 
 <body class="project-page">
 
-    <!-- HEADER -->
+<!-- HEADER -->
     <header class="semplice-header">
         <div class="smp-nav-row">
             <div class="nav-logo">
-                <a href="../" class="image-link">
-                    <img src="../img/logo.svg" alt="Logo">
+                <a href="./" class="image-link">
+                    <img src="img/logo.svg" alt="Logo">
                 </a>
             </div>
+
             <nav>
                 <ul>
                     <li><a href="https://f1nal.me">Work</a></li>
@@ -36,6 +37,7 @@
                     <li><a href="https://f1nal.me/info">About</a></li>
                 </ul>
             </nav>
+
             <button class="mobile-menu-btn" onclick="toggleMenu()">
                 <span></span><span></span><span></span>
             </button>
