--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                                     <source src="vid/elf_preview.mp4" type="video/mp4">
                                 </video>
                                 <div class="thumb-hover-meta">
-                                    <span class="title">ELF BAR</span>
+                                    <span class="title">Elf Bar</span>
                                     <span class="category">Commercial</span>
                                 </div>
                             </div>
-                            <img src="img/preview1.png" alt="ELF BAR">
+                            <img src="img/preview1.png" alt="">
                         </div>
                     </a>
                 </div>
@@ -309,6 +309,7 @@
 </body>
 
 </html>
+
 
 
 
