--- a/work/elfbar/index.html
+++ b/work/elfbar/index.html
@@ -19,10 +19,10 @@
 
 <body class="project-page">
 
-<header class="semplice-header">
+    <header class="semplice-header">
         <div class="smp-nav-row">
             <div class="nav-logo">
-                <a href="/" class="image-link">
+                <a href="./" class="image-link">
                     <img src="img/logo.svg" alt="Logo">
                 </a>
             </div>
