--- a/work/elfbar/index.html
+++ b/work/elfbar/index.html
@@ -18,13 +18,12 @@
 </head>
 
 <body class="project-page">
-
+<body class="project-page">
     <header class="semplice-header">
         <div class="smp-nav-row">
             <div class="nav-logo">
-                <a href="./" class="image-link">
-                    <img src="img/logo.svg" alt="Logo">
-                </a>
+                <a href="../../" class="image-link">
+                    <img src="../../img/logo.svg" alt="Logo"></a>
             </div>
 
             <nav>
