--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About - Oleg Shmarov</title>
     <link rel="stylesheet" href="../css/project.css">
-    <link rel="icon" href="../img/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="../img/favicon.webp" type="image/svg+xml">
 
     <script>
         (function () {
